<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
  <item android:id="@+id/action_menu"
        android:title="Menu"
        android:orderInCategory="100"
        android:icon="@drawable/ic_back_arrow"
        app:showAsAction="ifRoom"/>
  <item android:id="@+id/action_stuff"
        android:title="@string/action_stuff"
        android:orderInCategory="200"
        app:showAsAction="never"/>
    <item android:id="@+id/action_things"
          android:title="@string/action_things"
          android:orderInCategory="300"
          app:showAsAction="never"/>
    <item android:id="@+id/action_settings"
          android:title="@string/action_settings"
          android:orderInCategory="400"
          app:showAsAction="never"/>
    <item android:id="@+id/action_info"
          android:title="@string/action_info"
          android:orderInCategory="500"
          android:icon="@android:drawable/ic_menu_info_details"
          android:iconTint="@android:color/black"
          app:showAsAction="ifRoom"/>
</menu>
