<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.digitalrelay.materialplayground.fragments.UIFragment"
    tools:showIn="@layout/activity_themes">

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:orientation="vertical"
      android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
      <com.google.android.material.textfield.TextInputLayout
          android:id="@+id/ti_fname"
          android:layout_width="0dp"
          android:layout_weight="1"
          android:layout_height="wrap_content">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/first_name"
            android:inputType="textPersonName" />
      </com.google.android.material.textfield.TextInputLayout>
      <com.google.android.material.textfield.TextInputLayout
          android:id="@+id/ti_lname"
          android:layout_width="0dp"
          android:layout_weight="1"
          android:layout_height="wrap_content">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/last_name"
            android:inputType="textPersonName" />
      </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>
    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:padding="4dp"
        android:orientation="horizontal">
      <TextView
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:text="@string/gender"/>
      <RadioButton
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/male"/>
      <RadioButton
          android:layout_marginLeft="16dp"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/female"/>
    </RadioGroup>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ti_mail_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

      <EditText
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:hint="@string/email"
          android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ti_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

      <EditText
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:hint="@string/password"
          android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ti_confirm_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

      <EditText
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:hint="@string/confirm_password"
          android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:orientation="horizontal">

      <Button
          style="@style/Buton.Colored"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginRight="8dp"
          android:layout_marginBottom="8dp"
          android:text="@string/sign_up"
          android:textAllCaps="false"/>

    </LinearLayout>
  </LinearLayout>
</androidx.core.widget.NestedScrollView>