<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="4dp"
>

  <androidx.constraintlayout.widget.ConstraintLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:padding="4dp"
  >

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ti_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
        app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp">

      <EditText
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:hint="@string/user_name"
          android:inputType="textEmailAddress"
          android:imeOptions="actionNext"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ti_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/ti_username"
        app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
        app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp">

      <EditText
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:hint="@string/password"
          android:imeOptions="actionDone"
          android:inputType="textPassword"
      />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        style="?android:borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/ti_password"
        app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
        android:id="@+id/button"/>

    <Button
        style="?android:buttonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:text="@string/forgot_password"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/ti_password" android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent" android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent" android:id="@+id/button2"/>

  </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>