<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

  <androidx.cardview.widget.CardView
      android:id="@+id/cardView"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_margin="4dp"
  >

    <LinearLayout
        android:id="@+id/card_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="4dp"
        android:paddingLeft="4dp"
        android:paddingRight="4dp"
        android:orientation="vertical">
      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/title_text"
          style="@style/Text.Subhead"/>
      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/bacon1"
          style="@style/Text.Body1"
      />
      <TextView
          android:id="@+id/tv_placeholder"
          style="@style/Text.Caption"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/loading"
          android:gravity="center"
          android:visibility="invisible"
          android:layout_gravity="center"/>

    </LinearLayout>


  </androidx.cardview.widget.CardView>

  <View
      android:layout_width="match_parent"
      android:layout_height="280dp"/>

  <com.digitalrelay.materialplayground.views.FabProgressLayout
      android:id="@+id/fab_progress"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_margin="@dimen/fab_margin"
      android:elevation="4dp"
      app:layout_anchor="@id/cardView"
      app:layout_anchorGravity="bottom|end"
  >

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:tint="?android:attr/colorAccent"
        android:elevation="2dp"
        app:srcCompat="@drawable/ic_refresh_black_24dp"
        app:fabSize="mini"
        app:backgroundTint="?android:attr/colorBackground"
    />

    <ProgressBar
        style="@style/Widget.AppCompat.ProgressBar"
        android:layout_width="@dimen/size_56dp"
        android:layout_height="@dimen/size_56dp"
        android:visibility="invisible"
        android:layout_gravity="center"
    />

  </com.digitalrelay.materialplayground.views.FabProgressLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>